# referral-service

./: Makefile  README.md  docker-compose.yml  pyproject.toml
app/: forms.py  models.py  settings.py  urls.py  views.py
app/migrations/: 0002_alter_profile_ref_code.py  0003_alter_profile_phone_alter_profile_ref_code.py  0004_alter_profile_options_alter_profile_managers_and_more.py
app/templates/: basic.html  login.html
referral_app/: forms.py  models.py  serializers.py  settings.py  urls.py  views.py
referral_app/api/: permissions.py  router.py  serializers.py  views.py
referral_app/migrations/: 0001_initial.py  0002_alter_profile_managers_alter_profile_ref_code.py  0002_alter_profile_ref_code.py  0003_alter_profile_phone_alter_profile_ref_code.py  0003_alter_profile_ref_code.py  0003_alter_profile_ref_code_alter_profile_ref_received.py  0004_alter_profile_options_alter_profile_managers_and_more.py  0004_alter_profile_ref_code.py  0004_remove_profile_username_alter_profile_ref_code.py  0005_alter_profile_managers_alter_profile_ref_code.py  0005_alter_profile_password_alter_profile_ref_code.py  0006_alter_profile_ref_code.py
referral_app/templates/: index.html  login.html  show.html
